--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@legendapp/state": "^2.1.4",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.0-preview.8",
+    "expo-dev-client": "~3.3.4",
     "expo-font": "~11.10.0",
     "expo-linking": "~6.2.1",
     "expo-router": "~3.4.1",
@@ -26,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.1",
+    "react-native-mmkv": "^2.11.0",
     "react-native-safe-area-context": "4.7.4",
     "react-native-screens": "~3.27.0",
     "react-native-web": "~0.19.6"
